== unreleased changes

== 0.0.13

* Major documentation updates
* Added attr_accessible to the InProgressForm model for rails 3.2 compatibility
* Updated failing tests

== 0.0.12

* Fixed an issue where a symbol was used as the value in a where clause, causing rails 3.1 to freak out.

== 0.0.11

* Relaxed rails version restriction

== 0.0.10

* Moved the code that declares the form subject an instance variable to earlier in the multipart form handler.  We were running into issues where we could not set default values in the controller part actions because @form_subject was not yet available.

== 0.0.8

* Fixed a bug where the part would not be re-called if it failed validations

== 0.0.7

* Updated future work in readme
* Updated the behavior of the previous and next links to skip update pages

== 0.0.6

* Added indices to the migration
* Updated the controller mixin to do a better job handling namespaced models
* Clarified how the route needs to be setup in the readme
* Changed the ordering of the default form partial in the controller mixin
* Updated index links partial to not use the locals hash directly

== 0.0.5

* Updated gem requirements

== 0.0.4

* Added controller and views generators

== 0.0.3

* Moved capybara and sqlite to development gems
* Added an all_errors partial
* Updated the commenting

== 0.0.2

* Updating the readme

== 0.0.1

* Initial work complete.  Everything theoretically works but the code and tests are rough.